# huboCode

atlas_testArea/atlasWalker/: CMakeLists.txt  atlasDemo.cpp  trial.cpp  trial.h
atlas_testArea/atlasWalker/tinyWalker/: CMakeLists.txt
atlas_testArea/atlasWalker/tinyWalker/src/: NOTE.txt  atlas_joint_count.h  fakerave.cpp  fakerave.h
atlas_testArea/atlasWalker/tinyWalker/zmp/: CMakeLists.txt  atlas-zmp.h  footprint.cpp  footprint.h  gait-timer.cpp  gait-timer.h  zmpwalkgenerator.cpp  zmpwalkgenerator.h
dart_Lite/: CMakeLists.txt
dart_Lite/old_CMake/src/: CMakeLists.txt
dart_Lite/old_CMake/test/: CMakeLists.txt
dart_Lite/src/robotics/parser/dart_parser/: ToDartUtils.cpp
dart_Lite/test/: CMakeLists.txt  motion_rt.cpp  motion_rt.h  testFK.cpp  testFK_dofs.cpp  testFK_transform.cpp
gazebo/: README.mt
gazebo/converter/: CMakeLists.txt  convertURDF.cpp
gazebo/huboplus/: CMakeLists.txt
gazebo/huboplus/plugins/: CMakeLists.txt  lowerBody_jointControl.cpp  pid_controller.cpp  pid_controller.h
gazebo/huboplus/plugins/foreLeg/: cog_visual.cpp  cog_visual.h  foreleg_jointControl.cpp  foreleg_jointControl.h
gazebo/huboplus/plugins/gaiter/: block_Strategies.cpp  gaiter.cpp  gaiter.h
gazebo/huboplus/plugins/lowerBody/: lowerBody_jointControl.cpp  lowerBody_jointControl.h
gazebo/huboplus/plugins/snippets/: hiWorld_plugin.cpp
gazebo/huboplus/plugins/swing/: swing_plugin.cpp
gazebo/huboplus/plugins/wholeBody/: hp_initialization.cpp  hp_initialization.h
gazebo/huboplus/worlds/: huboplus_default.world  huboplus_foot.world  huboplus_foreleg.world  huboplus_hiStart.world  huboplus_lowerBody_default.world  huboplus_sitting.world
gazebo/models/huboplus/: manifest.xml  model.sdf
gazebo/models/huboplus_foreleg/: manifest.xml  model.sdf
gazebo/models/huboplus_leftFoot/: model.config  model.sdf
gazebo/models/huboplus_lowerBody/: model.config  model.sdf
gazebo/models/huboplus_rightFoot/: model.config  model.sdf
gazebo/models/jaemiHubo/: manifest.xml  model.sdf
gazebo/models/jaemiHubo/dae/: Body_LEP_col.dae  Body_LEP_vis.dae  Body_LSP_col.dae  Body_LSP_vis.dae  Body_LSR_col.dae  Body_LSR_vis.dae  Body_LSY_col.dae  Body_LSY_vis.dae  Body_LWY_col.dae  Body_LWY_vis.dae  Body_REP_col.dae  Body_REP_vis.dae  Body_RSP_col.dae  Body_RSP_vis.dae  Body_RSR_col.dae  Body_RSR_vis.dae  Body_RSY_col.dae  Body_RSY_vis.dae  Body_RWY_col.dae  Body_RWY_vis.dae  HeadYaw_vis.dae  Head_col.dae  Head_vis.dae  Hip_col.dae  Hip_vis.dae  Torso_col.dae  Torso_vis.dae  leftAnklePitch_col.dae  leftAnklePitch_vis.dae  leftFoot_col.dae  leftFoot_vis.dae  leftHipPitchRoll_col.dae  leftHipPitchRoll_vis.dae  leftHip_col.dae  leftHip_vis.dae  leftIndexDistal_vis.dae  leftIndexMedial_vis.dae  leftIndexProximal_vis.dae  leftKneeLower_col.dae  leftKneeLower_vis.dae  (+47 more)
gazebo/models/office_chair/: manifest.xml  model.sdf
gazebo/models/office_chair/meshes/: office_chair.stl
gazebo/tutorials/: CMakeLists.txt
gazebo/tutorials/plugins/: pid_joints.cpp
gazebo/tutorials/worlds/: pid_joints.world
huboMath/: CMakeLists.txt  basicModel.cpp  basicModel.h  test.cpp
huboTabs/InverseTransform/: CMakeLists.txt  VisualTester.cpp  VisualTester.h  VisualTesterApp.cpp
huboTabs/colladaParserTest/: CMakeLists.txt  huboPlus.cpp  huboPlus.h  huboPlusApp.cpp
huboTabs/colladaParserTest/collada_parser/: collada_parser.cpp  collada_parser.h  model.cpp  model.h
huboTabs/colladaParserTest/scenes/katana/: katana_300_6m180.urdf  katana_300_6m180.urdf.xacro  katana_300_6m180_test.urdf  katana_300_6m180_test.urdf.xacro  katana_world.urdf  katana_worldFloating.urdf
huboTabs/hubomzTab/: CMakeLists.txt  Controller.cpp  Controller.h  README.md  planningTab.cpp  planningTab.h  plot.txt
huboTabs/hubomzTab/mzcommon/: CMakeLists.txt
huboTabs/hubomzTab/src/: CMakeLists.txt
huboTabs/hubomzTab/zmp/: CMakeLists.txt
huboTabs/visualizationTab_CoM/: CMakeLists.txt  VisualTester.cpp
huboTabs/zmpTab/: CMakeLists.txt  planningTab.cpp  planningTab.h
huboTabs/zmpTab/hubomz/: CMakeLists.txt  HuboPlus.cpp  HuboPlus.h  fakerave.cpp  fakerave.h  fakerave_parse.cpp
huboTabs/zmpTab/mzcommon/: CMakeLists.txt
huboTabs/zmpTab/zmp/: hubo-zmp.h  zmpdemo.cpp
preview/: CMakeLists.txt  matrix.txt  plot.txt  previewZMP.cpp  previewZMP.h  test.cpp
rosPkgs/: run.sh
rosPkgs/joint_animation_tutorial/: manifest.xml
rosPkgs/joint_animation_tutorial/nodes/: joint_animation.py
rosPkgs/robotWalk/: CMakeLists.txt  log.txt  mainpage.dox  manifest.xml  run.sh  traj_yaml.py
rosPkgs/robotWalk/launch/: atlas.launch  atlas_bringup.launch  atlas_drc_vehicle_fire_hose.launch  atlas_no_controllers.launch  atlas_sandia_hands_no_controller.launch
rosPkgs/robotWalk/scripts/: 5steps.py  newfive.py  run_gazebo
rosPkgs/robotWalk/src/: publish_joint_commands.cpp  publish_joint_commands_fromTxt.cpp  subscribe_jointStates_test.cpp  test_keyframes.cpp
rosPkgs/robotWalk/src/base/: CMakeLists.txt  generateTraj.cpp  utilities.cpp  utilities.h
rosPkgs/robotWalk/src/base/scripts/: ComputeCOM.m  Swing5Steps.m  SwingFootPattern.m  getgains.m  getgains_iterate.m  zmpcomparegraph.m
rosPkgs/robotWalk/src/base/scripts/converted/: ZMP5Steps.m  ZMPPatternLat.m
rosPkgs/robotWalk/src/base/src/: CMakeLists.txt
rosPkgs/robotWalk/src/base/src/ZMPWalk/: CMakeLists.txt  PreviewController.cpp  PreviewController.h  PreviewControllerTest.cpp  ZMPGenerator.cpp  ZMPWalker.cpp
rosPkgs/robotWalk/src/walk/: CMakeLists.txt  walk.cpp  walk.h
rosPkgs/robotWalk/src/walk/zmp/: zmpUtilities.cpp  zmpUtilities.h
rosPkgs/robotWalk/src/walk/zmp/tests/: CMakeLists.txt  generateTraj.cpp
rosPkgs/robotWalk/src/walk/zmp/tests/old_rosNodes/: simpleWalk.cpp  simpleWalk.h  simpleWalkTest.cpp  test_keyframesBase.cpp
rosPkgs/robotWalk/src/zmp/: CMakeLists.txt  generateTraj.cpp  joint_angles_generate.cpp  zmpUtilities.cpp  zmpUtilities.h
rosPkgs/robotWalk/worlds/: atlas.world
swing/: CMakeLists.txt  README.md  plot.txt  swing.cpp  swing.h  test.cpp
